--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <b>First Session (two breakout groups): Conflict Dynamics in Development Corridors<br>
                   <br>Breakout Group 1: Interests of International Investors in Mega Infrastructures and Conflict Dynamics</b>
                 </span> 
-                <br>Chair: <i><a href="" target="_blank">Prof. Dr. Claudia Derichs</a> Humboldt Universität Zu Berlin</i> 
+                <br>Chair: <i><a href="" target="_blank">Prof. Dr. Claudia Derichs</a>, Humboldt Universität Zu Berlin</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Pascal" target="_blank">Dr Pascal Abb</a>, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
