--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </span> 
                 <br>Chair: <i><a href="" target="_blank">Prof. Dr. Claudia Derichs</a>, Humboldt Universität Zu Berlin</i> 
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Jana"></a>Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Pascal" target="_blank">Dr Pascal Abb</a>, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
                 <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/16-von-boemcken/" target="_blank">Dr. Marc von Boemcken</a>, BICC</i> <br>
                 <br>
@@ -104,7 +104,7 @@
                   <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
-                <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn (t.b.c.)</i> 
+                <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Ian" target="_blank">Professor Dr Ian Baird</a>, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Bruno" target="_blank">Professor Dr Bruno Milanez</a>, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
