last edit on speakers

--- a/speakers.html
+++ b/speakers.html
@@ -44,7 +44,7 @@
         </div>
         <div class="mt-5 mb-5">
           <p class="name" id="BramBüscher">Bram Büscher</p>
-          <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com." target="_blank">www.brambuscher.com.</a></p>
+          <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com" target="_blank">www.brambuscher.com </a>.</p>
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="Bruno">Bruno Milanez, Ph.D. in Environmental Policy from Lincoln University, New Zealand.</p>
@@ -72,7 +72,7 @@
           </ul>
         </div>
 
-        <div class="mt-5 mb-5">
+        <div class="mb-5">
           <p class="name" id="Ian">Ian Baird</p>
           <p>Professor, Department of Geography, University of Wisconsin-Madison.</p>
           <a href="https://scholar.google.com/citations?user=OTFOaTQAAAAJ" target="_blank">See all articles</a>
@@ -80,7 +80,9 @@
         
         <div class="mt-5 mb-5">
           <p class="name" id="Jana">Jana Hönke</p>
-          <p>Prof. Dr. Jana Hönke</p><a href="https://www.african-sociology.uni-bayreuth.de/en/team/jana-hoenke/index.php" target="_blank">CV</a>
+          <p>Jana Hönke is a Professor at the University of Bayreuth. Her chair group works at the intersection of global political sociology and security, peace and conflict studies with a focus on Africa. She is the author of Transnational Companies and Security Governance, 2013, The Global Making of Policing: Postcolonial Perspectives (with Mueller), 2016, and Africa’s Infrastructure Globalities (fc, with Cezne and Yang), and co-edits the Spaces of Peace, Security and Development book series at Bristol University Press.  Her articles have appeared in International Political Sociology, African Affairs, Security Dialogue, Mobilities and World Development among others.</p>
+          <a href="https://www.african-sociology.uni-bayreuth.de/en/team/jana-hoenke/index.php" target="_blank">Link to personal page</a><br>
+          <a href="https://infraglob.eu/" target="_blank">Link to ERC Africa’s Infrastructure Globalities project</a>
         </div>
 
         <div class="mt-5 mb-5">
