--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </span> 
                 <br>Chair: <i>Prof. Dr. Claudia Derichs, Humboldt Universität Zu Berlin</i> 
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Jana"></a>Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Jana">Dr Jana Hönke</a>, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Pascal" target="_blank">Dr Pascal Abb</a>, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
                 <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/16-von-boemcken/" target="_blank">Dr. Marc von Boemcken</a>, BICC</i> <br>
                 <br>
