add info for the speakers

--- a/speakers.html
+++ b/speakers.html
@@ -65,8 +65,21 @@
               <li>Gediminas Lesutis is a Marie Curie Fellow in the Department of Human Geography, Planning and International Development, at the University of Amsterdam, the Netherlands. Website: <a href="www.gediminaslesutis.com" target="_blank">www.gediminaslesutis.com</a>. His research is at the intersection of global politics, human geography, and critical theory, with a specific focus on politics of infrastructure, precarity, extractivism, and contemporary capitalist development across South and East Africa. His first monograph, The Politics of Precarity: Spaces of Extractivism, Violence, and Suffering, was published in 2022 with Routledge Interventions.  
                   <br>Selected recent publications:  
                   <ul>
-                    <li>Lesutis, G. 2022. Disquieting ambivalence of mega-infrastructures: Kenya’s Standard Gauge Railway as spectacle and ruination. Environment and Planning D: Society and Space, Accepted. https://doi.org/10.1177/02637758221125475</li>
-                    <li>Lesutis, G. 2022. Politics of disavowal: megaprojects, infrastructural biopolitcs, disavowed subjects. The Annals of the American Association of Geographers. Accepted. https://doi.org/10.1080/24694452.2022.2062292</li>
+                    <li>Lesutis, G. 2022. Disquieting ambivalence of mega-infrastructures: Kenya’s Standard Gauge Railway as spectacle and ruination. Environment and Planning D: Society and Space, Accepted. <a href="https://doi.org/10.1177/02637758221125475" target="_blank" rel="noopener noreferrer">https://doi.org/10.1177/02637758221125475</a></li>
+                    <li>Lesutis, G. 2022. Politics of disavowal: megaprojects, infrastructural biopolitcs, disavowed subjects. The Annals of the American Association of Geographers. Accepted. <a href="https://doi.org/10.1080/24694452.2022.2062292" target="_blank" rel="noopener noreferrer">https://doi.org/10.1080/24694452.2022.2062292</a></li>
+                  </ul>
+              </li>
+          </ul>
+        </div>
+
+        <div class="mt-5 mb-5">
+          <p class="name" id="Müller">Detlef Müller-Mahn</p>
+          <ul class="list-unstyled">
+              <li>Detlef Mueller-Mahn is professor of development geography at the University of Bonn, and former spokesperson of the Collaborative Research Center “Future Rural Africa” (<a href="www.futureruralafrica.de" target="_blank">www.futureruralafrica.de</a>). His present research focuses on the political ecology of land-use change, future-making, and green development in East Africa. Recent projects addressed the “riskscapes” of climate change in Africa, pastoralism and hydro-development in Ethiopia, urban water management in Khartoum, and the cut flower industry of Lake Naivasha in Kenya.    
+                  <br>Two recent publications:   
+                  <ul>
+                    <li>Müller-Mahn, D., Mkutu, K., Kioko, E. (2021): Megaprojects—mega failures? The politics of aspiration and the transformation of rural Kenya. The European Journal of Development Research <br> <a href="https://doi.org/10.1057/s41287-021-00397-x" target="_blank" rel="">https://doi.org/10.1057/s41287-021-00397-x</a></li>
+                    <li>Müller-Mahn, D., Allouche, J., Gebreyes, M. Debarry, A. (2022): The Water-Energy-Food Nexus Beyond “Technical Quick Fix”: The Case of Hydro-Development in the Blue Nile Basin, Ethiopia. Frontiers in Water, Vol. 4, <br> <a href="https://doi.org/10.3389/frwa.2022.787589 " target="_blank">https://doi.org/10.3389/frwa.2022.787589</a></li>
                   </ul>
               </li>
           </ul>
