--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <b>Breakout Group 2: National Projects and Local Contestations</b>
                 <br>Chair: <i><a href="speakers.html#Biruk" target="_blank">Biruk Terrefe</a>, BICC/ University of Oxford</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy" target="_blank">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Lesutis" target="_blank">Dr Gediminas Lesutis</a>, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy" target="_blank">Dr Kennedy Mkutu</a>, United States International University, Nairobi: </i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Lesutis" target="_blank">Dr Gediminas Lesutis</a>, University of Amsterdam (t.b.c.):</i> Dynamiscs of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
                 <br>Rapporteur: <i>Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
               </td>
             </tr>
@@ -97,14 +97,14 @@
                   <b>Second Session (three breakout groups): Overcoming Violence Associated with Environmental Infrastructures(Energy projects, Dams, conservation) <br>
                   <br>Breakout Group 1: Energy Infrastructures: Can Renewables Break the Resource Curse?</b>
                 </span> 
-                  <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/465-doering/" target="_blank">Maurice Döring</a>, BICC</i> 
-                  <br>Inputs: 
-                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Benjamin" target="_blank">Dr Benjamin Schütze</a>, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
-                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>: Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
-                  <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
+                <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/465-doering/" target="_blank">Maurice Döring</a>, BICC</i> 
+                <br>Inputs: 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Benjamin" target="_blank">Dr Benjamin Schütze</a>, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
+                <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
-                <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn</i> 
+                <br>Chair: <i><a href="speakers.html#Müller" target="_blank">Professor Dr Detlef Müller-Mahn</a>, University of Bonn</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Ian" target="_blank">Professor Dr Ian Baird</a>, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Bruno" target="_blank">Professor Dr Bruno Milanez</a>, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
