--- a/speakers.html
+++ b/speakers.html
@@ -108,8 +108,8 @@
                 <li>Kennedy Mkutu Agade is a Professor in International Relations at the United States International University-Africa, Nairobi, Kenya and the author of several books and papers in the areas of conflict, pastoralism, armed groups, and infrastructural development and the extractive industry in pastoral areas of East Africa. He is a consultant on conflict sensitivity for the World Bank in Kenya. His current research on “Violent Futures” is part of the research consortium CRC 228 “Future Rural Africa. Future-Making and Social-Ecological Transformation” run by the Universities of Bonn and Cologne, Germany, in collaboration with several universities in Kenya, Tanzania and Namibia. 
                     <br>Selected recent publications:  
                     <ul>
-                        <li>Mkutu, K. (2022). “Anticipation and Contestation along the LAPSSET Infrastructure Corridor in Kenya”. Nomadic Peoples 26 (2), September 2022: 190-218, DOI: https://doi.org/10.3197/np.2022.260203. </li>
-                        <li>Mkutu, K., Müller-Koné, M., & Owino, E. (2021). “Future visions, present conflicts: the ethnicized politics of anticipation surrounding an infrastructure corridor in northern Kenya”. Journal of Eastern African Studies, 15(4), October 2021: 707-727, DOI: https://doi.org/10.1080/17531055.2021.1987700.</li>
+                        <li>Mkutu, K. (2022). “Anticipation and Contestation along the LAPSSET Infrastructure Corridor in Kenya”. Nomadic Peoples 26 (2), September 2022: 190-218, <br> DOI: <a href="https://doi.org/10.3197/np.2022.260203" target="_blank" rel="noopener noreferrer">https://doi.org/10.3197/np.2022.260203</a> . </li>
+                        <li>Mkutu, K., Müller-Koné, M., & Owino, E. (2021). “Future visions, present conflicts: the ethnicized politics of anticipation surrounding an infrastructure corridor in northern Kenya”. Journal of Eastern African Studies, 15(4), October 2021: 707-727,<br> DOI: <a href="https://doi.org/10.1080/17531055.2021.1987700" target="_blank">https://doi.org/10.1080/17531055.2021.1987700</a>.</li>
                     </ul>
                 </li>
             </ul>
