--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Ian" target="_blank">Professor Dr Ian Baird</a>, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Bruno" target="_blank">Professor Dr Bruno Milanez</a>, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
-                <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/723-kemmerling/" target="_blank">Birgit Kemmerling</a>, BICC</i> <br>
+                <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/723-kemmerling/" target="_blank">Dr Birgit Kemmerling</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 3: Conservation Infrastructures—(How) Can They Contribute to Peace?</b> 
                 <br>Chair: <i>Prof. Michael Bollig, University of Cologne (t.b.c.)</i>
