add 3 short bios

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <td>14.30–15.00 </td>
               <td> 
                 <span><b>Keynote Speech and Plenary Discussion</b></span> 
-                <br><i>Dr Charis Enns, The University of Manchester</i>: The Coloniality of Mega Infrastructures at Global Frontiers and its Consequences for Dynamics of Peace and Conflict </td>
+                <br><i><a href="speakers.html#Charis" target="_blank" rel="noopener noreferrer">Dr Charis Enns</a>, The University of Manchester</i>: The Coloniality of Mega Infrastructures at Global Frontiers and its Consequences for Dynamics of Peace and Conflict </td>
             </tr>
             <tr>
               <td>15.00–16.00 </td>
@@ -72,7 +72,7 @@
                   <b>First Session (two breakout groups): Conflict Dynamics in Development Corridors<br>
                   <br>Breakout Group 1: Interests of International Investors in Mega Infrastructures and Conflict Dynamics</b>
                 </span> 
-                <br>Chair: <i>Prof. Dr. Claudia Derichs, Humboldt Universität Zu Berlin</i> 
+                <br>Chair: <i><a href="speakers.html#Claudia" target="_blank">Prof. Dr. Claudia Derichs</a>, Humboldt Universität Zu Berlin</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Jana">Dr Jana Hönke</a>, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Pascal" target="_blank">Dr Pascal Abb</a>, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
@@ -100,7 +100,7 @@
                 <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/465-doering/" target="_blank">Maurice Döring</a>, BICC</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Benjamin" target="_blank">Dr Benjamin Schütze</a>, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Daniel" target="_blank">Dr Daniel Salau Rogei</a>, Carleton University: </i>Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
                 <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
