--- a/speakers.html
+++ b/speakers.html
@@ -38,14 +38,17 @@
           <p>Benjamin Schuetze is Senior Researcher at the Arnold Bergstraesser Institute (ABI) in Freiburg and a member in the Young Academy for Sustainability Research at the Freiburg Institute for Advanced Studies (FRIAS). His research focuses on the political economy of renewable energies and the politics of intervention in the MENA. He is the author of ‘Promoting Democracy, Reinforcing Authoritarianism: US and European Policy in Jordan’ (Cambridge University Press, 2019). He has recently been admitted to the DFG Emmy Noether-Programme and is currently establishing a junior research group on ‘Renewable Energies, Renewed Authoritarianisms? The Political Economy of Solar Energy in the MENA’.
           <br><a href="https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C" target="_blank">https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C</a></p>
         </div>
+
         <div class="mt-5 mb-5">
           <p class="name" id="Biruk">Biruk Terrefe</p>
           <a href="https://www.qeh.ox.ac.uk/people/biruk-terrefe" target="_blank">Biruk Terrefe</a> is a DPhil Candidate at St Antony’s College in Oxford. 
         </div>
+
         <div class="mt-5 mb-5">
           <p class="name" id="BramBüscher">Bram Büscher</p>
           <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com" target="_blank">www.brambuscher.com </a>.</p>
         </div>
+
         <div class="mt-5 mb-5">
             <p class="name" id="Bruno">Bruno Milanez, Ph.D. in Environmental Policy from Lincoln University, New Zealand.</p>
             <ul class="list-unstyled">
@@ -57,6 +60,43 @@
                     </ul>
                 </li>
             </ul>
+        </div>
+
+        <div class="mt-5 mb-5">
+          <p class="name" id="Charis">Charis Enns</p>
+          <ul class="list-unstyled">
+              <li>Charis Enns is a Presidential Fellow in Socio-Environmental Systems at the Global Development Institute at the University of Manchester. Her research interests sit at the intersection of critical development studies, human and environmental geography, and political ecology, focusing on the impacts of large-scale investments in land and natural resources on rural landscapes, ecologies and socialities. Her most recent projects have looked at investments in biodiversity conservation in East Africa, and the impacts of large-scale infrastructure development on rural areas in East and Central Africa.   
+                  <br>Two recent publications: 
+                  <ul>
+                      <li>Enns, C., Bersaglio, B. and Karmushu, R. (2022). The Shifting Planes of Desert Locust Control: How New Technologies are Reconfiguring Spatialities of Disaster Management. Political Geography. <a href="https://www.sciencedirect.com/science/article/pii/S0962629822001469" target="_blank">https://www.sciencedirect.com/science/article/pii/S0962629822001469</a></li>
+                      <li>Sneyd, A., Haman, S., Enns, C. and Sneyd, L. Q. (2022) Commodity Politics: Contesting Responsibility in Central Africa. Montreal: McGill-Queen’s University Press. <br> <a href="https://www.mqup.ca/commodity-politics-products 9780228008897.php?page_id=120563& " target="_blank">https://www.mqup.ca/commodity-politics-products%209780228008897.php?page_id=120563&</a></li>
+                  </ul>
+              </li>
+          </ul>
+        </div>
+
+        <div class="mt-5 mb-5">
+          <p class="name" id="Claudia">Claudia Derichs</p>
+          <ul class="list-unstyled">
+              <li>Claudia Derichs is a professor at the Department of Asian and African studies at the Free University of Berlin. Her research covers Asia and the Middle East (MENA), and addresses contemporary political and social developments. Two decades of fieldwork in Muslim Southeast Asia, the MENA region and Japan resulted in the monograph Knowledge Production, Area Studies and Global Cooperation (2017) that reflects on Area Studies in Western academia, suggesting to re-think the conventional segregation into “geographical” regions and pay intensified attention to transregional and translocal connectivities between actors, institutions, ideas and beliefs. 
+                  <ul>
+                      <li>Derichs, Claudia 2021. 1968 and the 'Long 1960'. A Transregional Perspective; in: Ouaissa, Rachid / Friederike Pannewick / Alena Strohmeier (eds.): Re-Configurations. Contextualising Transformation Processes and Lasting Crises in the Middle East and North Africa. Wiesbaden: Springer VS, pp. 105-115. <a href="https://link.springer.com/chapter/10.1007/978-3-658-31160-5_7" target="_blank">https://link.springer.com/chapter/10.1007/978-3-658-31160-5_7</a></li>
+                      <li>Derichs, Claudia 2020. Global Sixties in the Non-Western World; in: Southeast Asian Social Science Review 5(2020)1: 5-26. <br> <a href="https://www.airitilibrary.com/Publication/alDetailedMesh?docid=P20220406001-202005-202204200016-202204200016-5-25 " target="_blank">https://www.airitilibrary.com/Publication/alDetailedMesh?docid=P20220406001-202005-202204200016-202204200016-5-25 </a></li>
+                  </ul>
+              </li>
+          </ul>
+        </div>
+
+        <div class="mt-5 mb-5">
+          <p class="name" id="Daniel">Daniel Salau Rogei</p>
+          <ul class="list-unstyled">
+              <li>Daniel Salau Rogei is a post doctorate fellow at Carleton University’s sociology and Anthropology department. He holds a doctorate in Anthropology from Carleton University, Canada. For a period spanning over 15 years, he extensively researched on and consulted with indigenous and pastoral communities on development, climate change, environment and social-economic empowerment. His interests embodies the intersections between culture and modernity; indigenous knowledge and modern forms of knowledge creation as well as sustainable well-being (enkishon).  
+                  <ul>
+                      <li>Rogei, D. (2021). Mediating Maendeleo: Examining the Nexus Between Geothermal Extraction, Wildlife Conservation and Community Well-being in Olkaria-Suswa, Southern Kenya (Doctoral dissertation, Carleton University).<a href="https://curve.carleton.ca/0898118d-1446-4732-bc1a-73759ea2b864 " target="_blank"> https://curve.carleton.ca/0898118d-1446-4732-bc1a-73759ea2b864</a></li>
+                      <li>Derichs, Claudia 2020. Global Sixties in the Non-Western World; in: Southeast Asian Social Science Review 5(2020)1: 5-26. <br> <a href="http://erepository.uonbi.ac.ke/handle/11295/93397 " target="_blank">http://erepository.uonbi.ac.ke/handle/11295/93397 </a></li>
+                  </ul>
+              </li>
+          </ul>
         </div>
 
         <div class="mt-5 mb-5">
